--- a/src/app/shared/components/loading/loading.component.html
+++ b/src/app/shared/components/loading/loading.component.html
@@ -1,1 +1,7 @@
-<p>loading works!</p>
+<div
+  class="absolute inset-0 flex items-center justify-center bg-transparent bg-opacity-75 z-50"
+>
+  <div
+    class="animate-spin rounded-full h-32 w-32 border-t-2 border-b-2 border-blue-500"
+  ></div>
+</div>
