--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,19 +1,34 @@
-<header class="header">
-  <div class="header__inner">
-    <div class="header__logo">
+<header class="bg-gray-800 text-white p-4  w-full">
+  <div class="container mx-auto flex justify-between items-center h-18">
+    <div class="flex items-center">
       <a routerLink="/home">
-        <img src="assets/news-flat.avif" alt="Logo" />
+        <img src="assets/news-flat.avif" alt="Logo" class="h-8" />
       </a>
     </div>
-    <ul class="header__nav">
+    <ul class="flex space-x-4">
       <li>
-        <a routerLink="/home" routerLinkActive="active">Home</a>
+        <a
+          routerLink="/top-headlines"
+          routerLinkActive="active"
+          class="hover:text-gray-400"
+          >Top Headlines</a
+        >
       </li>
       <li>
-        <a routerLink="/about" routerLinkActive="active">About</a>
+        <a
+          routerLink="/topic-headlines"
+          routerLinkActive="active"
+          class="hover:text-gray-400"
+          >Topic Headlines</a
+        >
       </li>
       <li>
-        <a routerLink="/contact" routerLinkActive="active">Contact</a>
+        <a
+          routerLink="/contact"
+          routerLinkActive="active"
+          class="hover:text-gray-400"
+          >Contact</a
+        >
       </li>
     </ul>
   </div>
