--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,37 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 
-:root {
-  --bg-color: #f8f9fa;
-  --bg-color-dark: #343a40;
-  --primary-color: #007bff;
-  --secondary-color: #6c757d;
-  --success-color: #28a745;
-  --info-color: #17a2b8;
-  --warning-color: #ffc107;
-  --danger-color: #dc3545;
-  --light-color: #f8f9fa;
-  --dark-color: #343a40;
-  --white-color: #fff;
-  --black-color: #000;
-  --text-color: #212529;
-  --border-radius: 0.25rem;
-  --border-color: #dee2e6;
-  --transition: all 0.3s linear;
-  --shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  --font-size-base: 1rem;
-  --font-size-lg: 1.25rem;
-  --font-size-sm: 0.875rem;
-  --line-height-base: 1.5;
-  --line-heigt-heading: 1.2;
-  --font-family: "Liter", sans-serif;
-  --font-family-heading: "Open Sans", sans-serif;
-  --fw-bold: bold;
-  --fw-normal: normal;
-  --text-body: #212529;
-  --text-heading: #000;
-  --text-white: #fff;
-  --text-muted: #6c757d;
-}
 /* font faces into public/fonts/Opne_Sans */
 @font-face {
   font-family: "Open Sans";
@@ -56,19 +24,4 @@
   font-style: normal;
 }
 
-body {
-  font-family: "Liter", sans-serif;
-  font-size: var(--font-size-base);
-  line-height: var(--line-height-base);
-  color: var(--text-body);
-  margin: 0;
-  padding: 0;
-  background-color: var(--light-color);
-}
-
-:is(h1, h2, h3, h4, h5, h6) {
-  font-family: var(--font-family-heading);
-  font-weight: bold;
-  margin: 0;
-  padding: 0;
-}
+@import "tailwindcss";
