implement scroll-to-top and topic link components; update app layout and routing

--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -5,7 +5,7 @@
 </div>
 }
 
-<div class="w-full px-4 w-3xl mx-auto">
+<div class="w-full px-4 mx-auto">
   <div class="flex flex-row flex-wrap gap-4 justify-center">
     @for (_news of headlines(); track _news.title ) {
     <app-news-card [headline]="_news"></app-news-card>
