--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
 <app-header />
-<main class="main">
-  <router-outlet></router-outlet>
+
+<main class="container mx-auto flex flex-row gap-4 p-4">
+  <div class="w-1/8">
+    <app-aside></app-aside>
+  </div>
+  <div class="w-7/8">
+    <router-outlet></router-outlet>
+  </div>
 </main>
+
+<app-scroll-to-top />
