--- a/src/app/pages/news/news-detail/news-detail.component.html
+++ b/src/app/pages/news/news-detail/news-detail.component.html
@@ -1,19 +1,58 @@
-<!-- <div class="news-detail p-6 bg-white rounded-lg shadow-md">
-    <h1 class="text-3xl font-bold mb-4">{{ news.title }}</h1>
-    <p class="date text-gray-600 mb-4">{{ news.date | date }}</p>
-    <img [src]="news.imageUrl" alt="{{ news.title }}" class="w-full h-auto mb-4 rounded-lg">
-    <div class="content">
-        <p class="text-gray-800">{{ news.content }}</p>
+@if (headline()) {
+
+<div class="max-w-4xl mx-auto p-6 bg-white shadow-md rounded-lg">
+  <img
+    [src]="headline()?.urlToImage"
+    alt="News Image"
+    class="w-full h-96 object-cover rounded-t-lg"
+  />
+  <div class="p-6">
+    <h1 class="text-3xl font-bold mb-4">{{ headline()?.title }}</h1>
+    <p class="text-gray-700 mb-6">
+      {{ headline()?.description }}
+    </p>
+    <div class="text-gray-800 leading-relaxed mb-6">
+      <p>
+        {{ headline()?.content }}
+      </p>
     </div>
+    <div class="flex justify-between items-center border-t pt-4">
+      <div class="text-sm text-gray-600">
+        <p>
+          Author:
+          <span class="font-semibold">
+            {{ headline()?.author }}
+          </span>
+        </p>
+        <p>
+          Date:
+          <span class="font-semibold">
+            {{ headline()?.publishedAt | date }}
+          </span>
+        </p>
+      </div>
+      <a
+        [href]="headline()?.url"
+        class="text-blue-500 hover:underline"
+        target="_blank"
+      >
+        Source: <span class="font-semibold">{{ headline()?.source?.name }}</span>
+      </a>
+    </div>
+  </div>
 </div>
-<div class="related-news mt-8">
-    <h2 class="text-2xl font-semibold mb-4">Related News</h2>
-    <div class="related-news-cards grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-        <div class="related-news-card bg-white p-4 rounded-lg shadow-md" *ngFor="let related of news.relatedNews">
-            <img [src]="related.imageUrl" alt="{{ related.title }}" class="w-full h-auto mb-4 rounded-lg">
-            <h3 class="text-xl font-semibold mb-2">{{ related.title }}</h3>
-            <p class="text-gray-600 mb-4">{{ related.description }}</p>
-            <a [routerLink]="['/news', related.id]" class="text-blue-500 hover:underline">Read more</a>
-        </div>
+} @else {
+<!-- No content found -->
+<div class="max-w-4xl mx-auto p-6 bg-white shadow-md rounded-lg">
+  <div class="animate-pulse flex space-x-4">
+    <div class="rounded-full bg-gray-300 h-12 w-12"></div>
+    <div class="flex-1 space-y-4 py-1">
+      <div class="h-4 bg-gray-300 rounded w-3/4"></div>
+      <div class="space-y-2">
+        <div class="h-4 bg-gray-300 rounded"></div>
+        <div class="h-4 bg-gray-300 rounded w-5/6"></div>
+      </div>
     </div>
-</div> -->
+  </div>
+</div>
+}
