--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="bg-gray-800 text-white p-4  w-full">
+<header class="bg-gray-800 text-white p-4 w-full">
   <div class="container mx-auto flex justify-between items-center h-18">
     <div class="flex items-center">
       <a routerLink="/home">
@@ -16,18 +16,28 @@
       </li>
       <li>
         <a
-          routerLink="/topic-headlines"
-          routerLinkActive="active"
-          class="hover:text-gray-400"
-          >Topic Headlines</a
-        >
-      </li>
-      <li>
-        <a
           routerLink="/contact"
           routerLinkActive="active"
           class="hover:text-gray-400"
           >Contact</a
+        >
+      </li>
+      <!-- Login -->
+      <li>
+        <a
+          routerLink="/login"
+          routerLinkActive="active"
+          class="hover:text-gray-400"
+          >Login</a
+        >
+      </li>
+      <!-- When logined, logout -->
+      <li>
+        <a
+          routerLink="/logout"
+          routerLinkActive="active"
+          class="hover:text-gray-400"
+          >Logout</a
         >
       </li>
     </ul>
